@@ -36,6 +36,13 @@ correct permissions.
 
 These maintainer scripts are installed into the F<DEBIAN> directory.
 
+B<dh_installdeb> will perform substitution of known tokens of
+the pattern B<#TOKEN#>.  In generally, scripts will want to
+include the B<#DEBHELPER#> to benefit from the shell scripts
+generated by debhelper commands (including those from
+B<dh_installdeb> when it processes I<package>.maintscript files)
+
+For more information on what tokens
 Inside the scripts, the token B<#DEBHELPER#> is replaced with
 shell script snippets generated by other debhelper commands.
 
@@ -87,6 +94,47 @@ validation is enabled as a warning since compat 10 and as a hard
 error in compat 12.
 
 =back
+
+=head1 SUBSTITUTION IN MAINTAINER SCRIPTS
+
+The B<dh_installdeb> will automatically replace the following tokens
+inside a provided maintainer script:
+
+=over 4
+
+=item #DEBHELPER#
+
+This token is replaced with generated shell snippets debhelper
+commands.  This includes the snippets generated by
+B<dh_installdeb> from I<package>.maintscript file (if present).
+
+=item #DEB_HOST_I<NAME>#, #DEB_BUILD_I<NAME>#, #DEB_TARGET_I<NAME>#
+
+These tokens are replaced with the respective variable from
+L<dpkg-architecture(1)>.  In almost all cases, you will want
+use the B<< #DEB_HOST_I<NAME> >> variant in a script to ensure
+you get the right value when cross-building.
+
+On a best effort, tokens of this pattern that do not match
+a variable in L<dpkg-architecture(1)> will be left as-is.
+
+=item #ENV.I<NAME>#
+
+These tokens of this form will be replaced with value of the
+corresponding environment variable.  If the environment
+variable is unset, the token is replaced with the empty
+string.
+
+Note that there are limits on which names can be used (see
+L</Limitations in token names>).
+
+=back
+
+=head2 Limitations in token names
+
+All tokens intended to be substituted must match the regex: #[A-Za-z0-9_.]+#
+
+Tokens that do not match that regex will be silently ignored.
 
 =cut
 
